plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.10'
	id 'io.spring.dependency-management' version '1.1.5'
	id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.asdf'
version = '0.0.1-dev'
description = 'Minilog JPA'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// swagger ui
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	// spring data jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// mysql jdbc
	implementation 'mysql:mysql-connector-java:8.0.32'
	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// testcontainers for junit 5
	testImplementation 'org.testcontainers:junit-jupiter:1.20.1'
	testImplementation 'org.testcontainers:testcontainers:1.20.1'
	testImplementation 'org.testcontainers:mysql:1.20.1'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// 취약성 처리
//	implementation 'org.apache.commons:commons-lang3:3.20.0'
//	implementation 'org.apache.commons:commons-compress:1.28.0'
//	implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.18'
//	implementation 'com.fasterxml.jackson.core:jackson-core:2.21.1'
//	implementation 'tools.jackson.core:jackson-core:3.1.0'
//	testImplementation 'org.assertj:assertj-core:3.27.7'
}

tasks.named('test') {
	useJUnitPlatform()

	//test logging
	testLogging {
		events "passed", "skipped", "failed"
		outputs.upToDateWhen { false }
		jvmArgs '-XX:+EnableDynamicAgentLoading'
	}
}

spotless {
	java {
		googleJavaFormat('1.22.0').reflowLongStrings()
	}
}

build.dependsOn 'spotlessApply'
